# DiversifiedSubgraphQuerying

./: CMakeLists.txt  DAF.h  DAF_div.cpp  README.md  compile.sh  dblp_label20_10s
